# backup

./: ISSUE_REALTIME_UPDATE.md  compare_countries.ps1  country_full_debug.txt  db_presiden_simulator.sql  debug_ekstraksi.js  debug_out.txt  debug_out_utf8.txt  docker-compose.yml  flow.md  generate_tax_db.ps1  github_test.txt  launcher.js  map-data-check.js  package-lock.json  package.json  route_sim.txt  running.txt  setup_info.txt  test_api_direct.js  verify_country_payload.js
apps/: next.config.ts  package.json  tsconfig.json
apps/frontend/src/app/page/map_system/map-data-rs/: Cargo.toml
apps/frontend/src/app/page/map_system/map-data-rs/src/: map.rs
apps/frontend/src/server/cpp-core/: CMakeLists.txt
apps/frontend/src/server/cpp-core/src/: drogon_server.cpp  main.cpp  uwebsockets_server.cpp
apps/frontend/src/server/rust-service/: Cargo.toml
apps/frontend/src/server/rust-service/src/: actix_server.rs  axum_server.rs
income_outcome_wasm/: Cargo.toml  README.md  build.bat  build.sh
income_outcome_wasm/src/: lib.rs
json/: buildingsDatabase.ts  ideologies.ts  religions.ts
postgre/: CHECKLIST.md  COMPLETION_REPORT.txt  INDEX.md  MIGRATION_GUIDE.md  README.md  SUMMARY.md
scratch/: extra_pushes.ps1  push_15_times.ps1
scripts/: bake_iso.js  bake_sql.js  generate_sda.py  populate_coords.js  sync_db.js
tools/: apply_gold_values_by_filename.py  apply_gold_values_simple.py  apply_item_variation.py  apply_requested_gold_values.py  apply_requested_gold_values_by_filename.py  apply_requested_gold_values_direct.py  apply_requested_gold_values_regex.py  assign_harga_buckets.py  automate_trade_exports.js  checkBase.js  checkGas.js  clean_harga_commas.py  clean_harga_files.py  create_afrika_cabinet_level_files.js  emas_new_update_log.json  emas_update_log.json  fetchApi.js  find-missing-countries.js  fix_harga_database_names.py  generateBuildingMetadata.js  generate_cabinet_level_files.js  generate_tourism_db_index.js  gold_changes.json  inspectBuildingMetadata.js  listBuildingCosts.js  listCost3000.js  migrate_afrika_extra.py  migrate_all_extra_to_harga.py  migrate_harga_to_database.py  minerals_update_log.json  (+18 more)
(+8562 files in other folders)
