[package]
name = "income_outcome_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.33"

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
