[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "actix_server"
path = "src/actix_server.rs"

[[bin]]
name = "axum_server"
path = "src/axum_server.rs"
